--- a/src/common/debug.twig
+++ b/src/common/debug.twig
@@ -12,9 +12,60 @@
 					</span>
 				</summary>
 				<p class="text-neutral-600 mt-3 group-open:animate-fadeIn">
-					<pre>{{ dump() }}</pre>
+					<pre dir="ltr" id="output" class="break-all whitespace-pre-wrap">{{ _self.dumpContext(_context|json_encode|raw) }}</pre>
 				</p>
 			</details>
 		</div>
 	</div>
 </div>
+{% macro dumpContext(context) %}
+  {%- for key, value in context -%}
+    {%- if value is iterable and not value is string -%}
+      <strong>{{ key }}</strong>: <br>
+      {{ _self.dumpContext(value) }}
+    {%- else -%}
+      <strong>{{ key }}</strong>: {{ value|json_encode|raw }}<br>
+    {%- endif -%}
+  {%- endfor -%}
+{% endmacro %}
+<script>
+// populate the output div with the context data
+;
+var output = {{ _self.dumpContext(_context|json_encode|raw) }};
+console.log(output);
+// now take the output, format it, syntax highlight it, and insert it into the output div
+var formatted = JSON.stringify(output, null, 4);
+// create a function to syntax highlight the JSON
+function syntaxHighlight(json) {
+  if (!json) return ""; //no JSON from response
+
+  json = json
+    .replace(/&/g, "&amp;")
+    .replace(/</g, "&lt;")
+    .replace(/>/g, "&gt;");
+  return json.replace(
+    /("(\\u[a-zA-Z0-9]{4}|\\[^u]|[^\\"])*"(\s*:)?|\b(true|false|null)\b|-?\d+(?:\.\d*)?(?:[eE][+\-]?\d+)?)/g,
+    function (match) {
+      var cls = "number";
+      if (/^"/.test(match)) {
+        if (/:$/.test(match)) {
+          cls = "key";
+        } else {
+          cls = "string";
+        }
+      } else if (/true|false/.test(match)) {
+        cls = "boolean";
+      } else if (/null/.test(match)) {
+        cls = "null";
+      }
+      return '<span class="' + cls + '">' + match + "</span>";
+    }
+  );
+}
+// call the syntax highlighting function
+var highlighted = syntaxHighlight(formatted);
+// insert the highlighted JSON into the output div
+
+document.getElementById('output').innerHTML = highlighted;
+
+</script>
