--- a/src/common/tailwindsections/header-2.twig
+++ b/src/common/tailwindsections/header-2.twig
@@ -1,13 +1,14 @@
 <header>
-	<nav class="bg-white border-gray-200 px-4 lg:px-6 py-2.5 dark:bg-gray-800">
-		<div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl">
+	<div class="container mx-auto">
+	<nav class="bg-white border-gray-200 py-2.5 dark:bg-gray-800">
+		<div class="flex flex-wrap justify-between items-center">
 			<a href="https://flowbite.com" class="flex items-center">
-				<img src="https://flowbite.com/docs/images/logo.svg" class="me-3 h-6 sm:h-9" alt="Flowbite Logo"/>
-				<span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">Flowbite</span>
+				<img src="/src/assets/images/logo.png" class="me-3 h-6 sm:h-9" alt="Flowbite Logo"/>
+				<span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">{{ site.title }}</span>
 			</a>
-			<div class="flex items-center lg:order-2">
-				<a href="#" class="text-gray-800 dark:text-white hover:bg-gray-50 focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 me-2 dark:hover:bg-gray-700 focus:outline-none dark:focus:ring-gray-800">Log in</a>
-				<a href="#" class="text-white bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 me-2 dark:bg-primary-600 dark:hover:bg-primary-700 focus:outline-none dark:focus:ring-primary-800">Get started</a>
+			<div class="flex items-center lg:order-2 text-base">
+				<a href="#" class="text-gray-800 dark:text-white hover:bg-gray-50 focus:ring-4 focus:ring-gray-300 font-medium rounded-lg  px-4 lg:px-5 py-2 lg:py-2.5 me-2 dark:hover:bg-gray-700 focus:outline-none dark:focus:ring-gray-800"><span class="i-mdi-user"></span></a>
+				<a href="#" class="text-white bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 font-medium rounded-lg  px-4 lg:px-5 py-2 lg:py-2.5 me-2 dark:bg-primary-600 dark:hover:bg-primary-700 focus:outline-none dark:focus:ring-primary-800">البدء</a>
 				<button data-collapse-toggle="mobile-menu-2" type="button" class="inline-flex items-center p-2 ml-1 text-sm text-gray-500 rounded-lg lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="mobile-menu-2" aria-expanded="false">
 					<span class="sr-only">Open main menu</span>
 					<svg class="w-6 h-6" fill="currentColor" viewbox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
@@ -42,4 +43,5 @@
 			</div>
 		</div>
 	</nav>
+	</div>
 </header>
