fix: directory from pages to tempaltes
little more tidier

--- a/src/templates/404.twig
+++ b/src/templates/404.twig
@@ -1,6 +1,6 @@
 <!-- privacy-policy.twig -->
-{% extends '../layout.twig' %}
+{% extends "/layout.twig" %}
 
 {% block content %}
-    {% include '../components/404-block.twig' %}
+    {% include '/common/404-block.twig' %}
 {% endblock %}
