--- a/src/header.twig
+++ b/src/header.twig
@@ -1,3 +1,3 @@
 {% include '/common/debug.twig' %}
 {% include '/common/coupon.twig' %}
-{% include '/common/tailwindsections/header-2.twig' %}
+{% include '/common/sections/header.twig' %}
